--- a/views/index.ejs
+++ b/views/index.ejs
@@ -424,7 +424,7 @@
         };
 
         try {
-          const response = await fetch("http://localhost:3000/testAI", {
+          const response = await fetch("/testAI", {
             method: "POST",
             headers: {
               "Content-Type": "application/json",
